[package]
name = "rubberband-sys"
version = "0.1.0"
authors = ["kbone <kbonehobby@gmail.com>"]
edition = "2018"
build = "build.rs"
license = "GPL-2.0+"
description = "safe Rubber Band Library binding"
repository = "https://github.com/KBone12/rubberband"
keywords = ["Rubber Band", "audio", "time stretch", "pitch shift"]
categories = ["audio", "external-ffi-bindings"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
bindgen = "0.54.0"
